--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <form action = "javascript:handleClick()" method='post' name='form1'>
     Name:<input type='text' name='name' required="true">
     <br>
-    Email:<input type='email' name='email'>
+    Email:<input type='email' name='email', required = "true" >
     <br>
     Type of Leave : <input list="leave_type" name="leaves" required="true">
     <datalist id="leave_type">
